# picosnitch

./: .gitignore  LICENSE  README.md  hatch_build.py  microsnitch.py  picosnitch.py  processsnitch.py  pyproject.toml  setup.py  tach.toml
.github/workflows/: build.yml  ci.yml  pages.yml  pypi.yml  python-publish.yml  screenshots.yml  tar-publish.yml
arch/: .SRCINFO  PKGBUILD  picosnitch.service
debian/: changelog  control  copyright  picosnitch.links  picosnitch.service  picosnitch.triggers  rules
docs/: _config.yml  callgraph.dot  callgraph.py  configuration.md  generate_screenshots.sh  how-it-works.md  index.md  mkdocs.yml  schema.md  screenshots.md
docs/assets/: extra.css
docs/screenshots/: .gitignore  generate_screenshots.py  keystroke_overlay.py  mock_feed.py  playwright_webui.py  seed_db.py
docs/screenshots/fixtures/: events.jsonl
docs/screenshots/vhs/: demo.tape  top.tape  tui.tape
gentoo/: metadata.xml  picosnitch-0.5.0.ebuild
picosnitch/: __init__.py  __main__.py  bpf_wrapper.py  cli.py  config.py  constants.py  daemon.py  event_structures.py  main_loop.py  main_process.py  monitor_subprocess.py  notifcation_manager.py  notifications.py  primary_subprocess.py  process_manager.py  rfuse_subprocess.py  secondary_subprocess.py  types.py  ui.py  user_interface.py  utils.py  virustotal_subprocess.py
picosnitch/bpf/: picosnitch.bpf.c
picosnitch/subprocesses/: fuse.py  monitor.py  notifications.py  primary.py  secondary.py  virustotal.py
picosnitch/ui/: top.py  tui.py  webui.py
rpm/: picosnitch.spec
snap/: snapcraft.yaml
src/picosnitch/: __init__.py  __main__.py  bpf_wrapper.py  cli.py  config.py  constants.py  daemon.py  live_feed.py  main_loop.py  process_manager.py  types.py  utils.py
src/picosnitch/bpf/: picosnitch.bpf.c  vmlinux_arm64.h  vmlinux_x86.h
src/picosnitch/subprocesses/: fuse.py  monitor.py  notifications.py  primary.py  remote_sql.py  secondary.py  virustotal.py
src/picosnitch/ui/: _chrome.py  _keys.py  top.py  tui.py  webui.py
src/picosnitch/ui/static/: app.js  index.html  style.css
tests/: test_functional.py  test_live_feed.py  test_monitor.py  test_notifications.py  test_remote_sql.py  test_robustness.py  test_ui_chrome.py  test_ui_top.py  test_ui_tui.py  test_ui_webui.py  test_virustotal.py
