[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picosnitch"
version = "1.0.3"
requires-python = ">=3.12"
description = "Monitor network traffic per executable using BPF"
urls = { "Homepage" = "https://github.com/elesiuta/picosnitch" }
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil",
]

[project.optional-dependencies]
dash = ["dash", "pandas", "plotly"]
geoip = ["geoip2"]
notifications = ["dbus-python"]
sql = ["psycopg[binary]", "pymysql"]
themes = ["dash-bootstrap-components", "dash-bootstrap-templates"]
virustotal = ["requests"]
full = [
    "picosnitch[dash,geoip,notifications,sql,themes,virustotal]"
]

[project.scripts]
picosnitch = "picosnitch.cli:start_picosnitch"

[tool.hatch.build.targets.sdist]
include = [
    "/picosnitch/",
    "/hatch_build.py",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["picosnitch"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
"picosnitch/bpf/picosnitch.bpf.o" = "picosnitch/bpf/picosnitch.bpf.o"

[tool.ruff]
target-version = "py312"
line-length = 200
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[dependency-groups]
dev = [
    "pyan3==2.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
