[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picosnitch"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Monitor network traffic per executable using BPF"
urls = { "Homepage" = "https://github.com/elesiuta/picosnitch" }
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
sql = ["psycopg[binary]", "pymysql"]
all = [
    "picosnitch[sql]"
]

[project.scripts]
picosnitch = "picosnitch.cli:start_picosnitch"

[tool.hatch.version]
path = "src/picosnitch/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src/picosnitch/",
    "/hatch_build.py",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/picosnitch"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
"src/picosnitch/ui/static/index.html" = "picosnitch/ui/static/index.html"
"src/picosnitch/ui/static/app.js" = "picosnitch/ui/static/app.js"
"src/picosnitch/ui/static/style.css" = "picosnitch/ui/static/style.css"

[tool.ruff]
target-version = "py312"
line-length = 200
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[dependency-groups]
dev = [
    "pillow>=10.0",
    "playwright>=1.40",
    "pyan3==2.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "tach>=0.35.0",
    "ty>=0.0.39",
]
